[gd_scene load_steps=5 format=3 uid="uid://bjy8lfyjbh7nd"]

[ext_resource type="Script" path="res://scenes/translator_main.gd" id="1_8ltop"]
[ext_resource type="PackedScene" uid="uid://dn6t7vhy7fu0c" path="res://scenes/word_shape.tscn" id="1_hqhq0"]
[ext_resource type="PackedScene" uid="uid://qlr1ccpowd0g" path="res://puzzle_shape.tscn" id="2_qaam7"]
[ext_resource type="PackedScene" uid="uid://cxfcduk5pm2wl" path="res://shapes_dock.tscn" id="4_svbog"]

[node name="translator_main" type="Node2D"]
script = ExtResource("1_8ltop")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 640.0
color = Color(0.103521, 0.193456, 0.171356, 1)

[node name="shapes_dock" parent="." instance=ExtResource("4_svbog")]

[node name="puzzle_shape" parent="." instance=ExtResource("2_qaam7")]

[node name="word_shape" parent="." instance=ExtResource("1_hqhq0")]
position = Vector2(0, 3)

[node name="word_box" type="TextEdit" parent="."]
offset_left = 640.0
offset_top = 32.0
offset_right = 1120.0
offset_bottom = 96.0
placeholder_text = "Enter your translation here (no contractions please)"

[node name="Win_button" type="Button" parent="."]
visible = false
offset_left = 936.0
offset_top = 160.0
offset_right = 972.0
offset_bottom = 191.0
text = "win"

[node name="exit_button" type="Button" parent="."]
offset_left = 20.0
offset_top = 32.0
offset_right = 149.0
offset_bottom = 90.0
text = "exit"

[node name="instructions" type="Label" parent="."]
offset_left = 41.0
offset_top = 113.0
offset_right = 342.0
offset_bottom = 578.0
text = "welcome to the translator. to create
the shape pictured in blue, you must
enter a logical English sentence
into the indicated text box. To find
this sentence, you can solve the
puzzle below by filling the blue shape
using the orange shapes below. 
However, word order, conjugation, 
and specific word choice are ultimately
up to you.
For example, if the shapes indicate
\"1st person pronoun\" and \"to run,\" a
valid sentence would be \"I run.\" 
THERE CAN BE MULTIPLE VALID 
SENTENCES FOR ONE PUZZLE, BUT
ONLY ONE CORRECT ANSWER.
click on a shape to pick it up, space
to put it down, right arrow to rotate."

[connection signal="mouse_exited" from="word_shape" to="word_shape" method="_on_mouse_exited"]
[connection signal="text_changed" from="word_box" to="." method="_on_word_box_text_changed"]
[connection signal="pressed" from="Win_button" to="." method="_on_win_button_pressed"]
[connection signal="pressed" from="exit_button" to="." method="_on_exit_button_pressed"]
